# Physical-AI-and-Humanoid-Robotics

./: .gitignore  .npmignore  README.md  prompt.txt
.gemini/tmp/: feature_description.txt
.specify/memory/: constitution.md
backend/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py  main.py
backend/scripts/: ingest.py  init_db.py
backend/src/: cohere_client.py  qdrant.py
backend/src/api/: chat.py
backend/src/services/: rag.py
history/prompts/003-rag-chatbot-features/: 001-create-spec-for-rag-chatbot-and-interactive-features.spec.prompt.md  002-create-plan-for-rag-chatbot-and-interactive-features.plan.prompt.md  003-create-tasks-for-rag-chatbot-and-interactive-features.tasks.prompt.md  004-update-embedding-model-to-cohere.refactor.prompt.md  005-fix-white-screen-by-disabling-chatbot.refactor.prompt.md  006-fix-chatbot-rag-config.implement.prompt.md  007-complete-chatbot-setup.implement.prompt.md  008-fix-frontend-ssr-issue.refactor.prompt.md  009-fix-chatbot-visibility-with-browseronly.refactor.prompt.md  010-fix-chatbot-window-api-usage.refactor.prompt.md  (+4 more)
physicalroboticbook/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
physicalroboticbook/docs/: conclusion.md  intro.md
specs/003-rag-chatbot-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-book-ai-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/ui-ux-revamp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+81 files in other folders)
