[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "cohere>=5.20.0",
    "fastapi>=0.124.2",
    "markdown>=3.10",
    "openai-agents>=0.6.3",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
